solve input element overflow its container

--- a/frontend/src/components/EditText/edittext.module.css
+++ b/frontend/src/components/EditText/edittext.module.css
@@ -15,7 +15,8 @@
 }
 
 .input {
-  flex-grow: 1;
+  display: block;
+  width: 100%;
   margin-left: var(--spacing-large);
   padding: var(--spacing-tiny) 0;
   background-color: transparent;
